# Main

./: README.md
Ads1115c/Sensor_0to5V_Test/: Makefile  adcTest.cc
Ads1115c/include/: Ads1115c.h
Ads1115c/source/: Ads1115c.cc
ArduinoUno/servo_spi_slave/: servo_spi_slave.ino
ControladorDigital/: ControleDigital.md
ControladorDigital/Filtro Butterworth - Sallen Key/: FuncaoTransferencia.txt  PassivosDoFiltro.csv  Resistores.txt  calcSallenKeyTopologyButterworthFilter  calcSallenKeyTopologyButterworthFilter.cpp  stepPlotBodePlot.py
ControladorDigital/LibCtrCEqDiff/: LibCtrEqDiff.h
ControladorDigital/gtest/: CMakeLists.txt  Makefile  cmake_install.cmake  gtestRun.sh  runTests  testsADC.cpp
Controle/: OnlyPIFeedBackLoop.sce
Filtros/Filtro Butterworth - Sallen Key/: Capacitores.txt  calcSallenKeyTopologyButterworthFilter  calcSallenKeyTopologyButterworthFilter.cpp
Filtros/Filtro Butterworth - Sallen Key/LaTeX/: FiltroButterworthTopologiaSallenKey.aux  FiltroButterworthTopologiaSallenKey.tex  FiltroButterworthTopologiaSallenKey.tex.backup  Sallen-Key_Generic_Circuit.pnm
Microntroladores/ControladorDigital/gtest/: CMakeCache.txt  Test_ControladorDigital.h  runTests  tests.cpp  testsPWM.cpp
Microntroladores/Projetos/Servo-Seguidor/: ServoSeguidor.md
Projetos/Servo-Seguidor/ArdUno/: servo_spi_slave.ino
Projetos/Servo-Seguidor/RB/: Controle  Makefile  controle.cc
RaspberryPi3B/: RaspberryPI3B.md
RaspberryPi3B/Apps/adcTeste/: Makefile  adcInterrupTest  adcInterrupcaoTimerTeste.cc  adcTeste
RaspberryPi3B/Apps/spiTeste/: log.txt  spiTeste  (+2 more)
(+63 files in other folders)
